# kon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: benchmark_main.cpp.CEFB7F4157D74F59.idx  core.cpp.E2C6941B9ABB0229.idx  core.hpp.78A2012EA1876687.idx  test_main.cpp.9CACA9FCCCBF03A9.idx
.github/workflows/: cmake-single-platform.yml
cmake/: get_packages.cmake
core/: CMakeLists.txt
core/resources/casino_pack/: pack.json
core/resources/casino_pack/textures/: black_dominoes.json
core/resources/itch_packs/: credit.txt  pack.json
core/resources/kon_primitaves/: pack.json
core/resources/kon_primitives/shaders/src/: renderScreen.comp  triangle.frag  triangle.vert
core/src/config/: config.hpp  config.hpp.in
core/src/kon/container/: array.hpp  arraylist.hpp  circular_buffer.hpp  hashmap.hpp  iterate.hpp  set.hpp  string.cpp  string.hpp
core/src/kon/core/: allocator.cpp  allocator.hpp  assert.hpp  core.cpp  core.hpp  directory.cpp  directory.hpp  events.cpp  events.hpp  library.hpp  object.cpp  object.hpp  platform.hpp  reflection.cpp  reflection.hpp  util.hpp  uuid.cpp  uuid.hpp  variant.cpp  variant.hpp  window.cpp  window.hpp
core/src/kon/debug/: debug_imgui.cpp  debug_imgui.hpp  instrumentation.cpp  instrumentation.hpp  log.cpp  log.hpp  timer.cpp  timer.hpp
core/src/kon/engine/: engine.cpp  engine.hpp  module.cpp  module.hpp
core/src/kon/math/: aproximations.hpp  matrix.cpp  matrix.hpp  matrix2x2.hpp  matrix3x3.hpp  matrix4x4.hpp  matrix_operations.hpp  quaternion.hpp  transformations.cpp  transformations.hpp  unreal.hpp  vector.cpp  vector.hpp  vector2.hpp  vector3.hpp  vector4.hpp  vector_operations.hpp
core/src/kon/resource/: resource.cpp  resource.hpp  resource_cache.cpp  resource_cache.hpp  resource_image.cpp  resource_image.hpp  resource_model.cpp  resource_model.hpp  resource_pack.cpp  resource_pack.hpp  resource_shader.cpp  resource_shader.hpp
core/src/modules/graphics/: graphics_module.cpp  graphics_module.hpp
core/src/modules/graphics/vulkan/: vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_cmd.cpp  vulkan_cmd.hpp  vulkan_config.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_descriptors.cpp  vulkan_descriptors.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_imgui.cpp  vulkan_imgui.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_texture.hpp  vulkan_util.cpp  vulkan_util.hpp
core/src/modules/graphics/vulkan/pipelines/: vulkan_compute_screen.cpp  vulkan_compute_screen.hpp  vulkan_compute_screen_pipeline.cpp  vulkan_compute_screen_pipeline.hpp  vulkan_mesh_pipeline.cpp  vulkan_mesh_pipeline.hpp
core/src/platform/linux/: linux_directory.cpp  linux_library.cpp
core/src/platform/windows/: windows_directory.cpp
editor/: CMakeLists.txt
editor/src/editor/: main.cpp
modules/: CMakeLists.txt
modules/example/src/: example_module.cpp
modules/graphics/src/: graphics_module.cpp
testing/: CMakeLists.txt
testing/benchmarks/: benchmark_main.cpp
testing/tests/: test_allocators.cpp  test_container.cpp  test_engine.cpp  test_main.cpp  test_math.cpp  test_platform.cpp  test_reflection.cpp
